[DevTools] Replace "spdy" initiators with "h2"

SPDY in Chrome simply refers to HTTP/2 now:
https://groups.google.com/a/chromium.org/forum/#!topic/net-dev/iwUnvL0Ul6Q

Bug: 704146, 881567
Change-Id: Ida5871c3a738755325413b3dd042af5d442497c1
Reviewed-on: https://chromium-review.googlesource.com/c/1268959
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Joey Arhar <jarhar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597641}
Former-commit-id: 60d5b1ea70d1fd7a8acd214c9b0a7661b20ee9e4